@@ -21,7 +21,7 @@ namespace LightBDD.Framework.UnitTests.Parameters
 
         class Derived : Base
         {
-            public string Value { get; set; }
+            public new string Value { get; set; }
             public string Text { get; set; }
             public override int Virtual { get; set; }
         }
