@@ -5,6 +5,7 @@ Version 2.4.0
 ----------------------------------------
 Summary:
 + #67 (Fixie)(New) Added LightBdd.Fixie2 integration project with https://github.com/fixie/fixie
++ #70 (all)(New) Added Table<TRow> and VerifiableTable<TRow> to represent tabular step method parameters
 
 Version 2.3.6
 ----------------------------------------
